test/e2e/fail_compile/type_errors/ct_required_return_unsupported.cst
fn value() -> !runtime num {
    1
}

fn main() {
    let _ = value();
}
